Fixed: High contrast skin visibility problem (bug#14503).

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Default.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.Default.css
@@ -46,7 +46,9 @@ div.DnDUpload {
 
 
 .TableSmall thead .SortAscendingLarge a,
-.TableSmall thead .SortDescendingLarge a {
+.TableSmall thead .SortDescendingLarge a,
+.ColumnSettingsContainer .DeleteFilter,
+.ColumnSettingsContainer .SelectedValue {
     color: #000;
 }
 
